# Pomodoro

./: .gitignore  Makefile  alembic.ini  depends.py  docker-compose.yml  exception.py  gunicorn.conf.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 1551df94783e_dell_access_token.py  1f6cb13ba7a5_add_yandex_access_token_to_userprofile.py  233d453d385b_mod_userprofile.py  422f62b44d2b_new.py  4dc540b49b90_ddd.py  b833c895590a_init.py  cb82353fc3c9_add_google_access_token_email_name.py  dcac4e8cb7fc_access_token.py  e48f7f14addb_user_init.py  e95cd7c9e6be_user_id_in_tasks.py
app/: depends.py  exception.py  main.py  settings.py
app/infrastucture/cache/: __init__.py  accessor.py
app/infrastucture/database/: __init__.py  accessor.py
app/tasks/: handlers.py  models.py  schemas.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/auth/client/: __init__.py  google.py  yandex.py
app/users/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
cache/: __init__.py  accessor.py
client/: __init__.py  google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schemas/: __init__.py  auth.py  task.py  user.py
services/: __init__.py  auth.py  task.py  user.py
